TEX-42 and TEX-45: View all and Edit Job code implementations and generic exception handling added
