# src/main/java/com/tex/api/service/JobService.java
@@ -1,8 +1,13 @@
 package com.tex.api.service;
 
 import com.tex.api.generated.model.Job;
+import java.util.List;
 
 public interface JobService {
+    
     Job postJob(Job job);
     
+    Job editJob(Job job);
+    
+    List<Job> getAllJobs();
 }
